envoy.yaml
static_resources:
  listeners:
  - name: ingress_8080
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          common_http_protocol_options:
            idle_timeout: 3600s
            headers_with_underscores_action: ALLOW
          http_protocol_options:
            accept_http_10: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              # UI Landing Dashboard Engine
              - match: { prefix: "/" }
                route: { cluster: ui_backend, timeout: 0s }
              # TROJAN Core Cluster Multiplexing
              - match: { prefix: "/saeka-tojirp" }
                route: { cluster: xray_trojan_ws, timeout: 0s }
              - match: { prefix: "/saeka-tojirp-hu" }
                route: { cluster: xray_trojan_hu, timeout: 0s }
              - match: { prefix: "/saeka-tojirp-xh" }
                route: { cluster: xray_trojan_xh, timeout: 0s }
              # VMESS Core Cluster Multiplexing
              - match: { prefix: "/vmess-saeka" }
                route: { cluster: xray_vmess_ws, timeout: 0s }
              - match: { prefix: "/vmess-saeka-hu" }
                route: { cluster: xray_vmess_hu, timeout: 0s }
              - match: { prefix: "/vmess-saeka-xh" }
                route: { cluster: xray_vmess_xh, timeout: 0s }
              # VLESS Core Cluster Multiplexing
              - match: { prefix: "/vless-saeka" }
                route: { cluster: xray_vless_ws, timeout: 0s }
              - match: { prefix: "/vless-saeka-hu" }
                route: { cluster: xray_vless_hu, timeout: 0s }
              - match: { prefix: "/vless-saeka-xh" }
                route: { cluster: xray_vless_xh, timeout: 0s }
              # SHADOWSOCKS Core Cluster Multiplexing
              - match: { prefix: "/ss-saeka" }
                route: { cluster: xray_ss_ws, timeout: 0s }
              - match: { prefix: "/ss-saeka-hu" }
                route: { cluster: xray_ss_hu, timeout: 0s }
              - match: { prefix: "/ss-saeka-xh" }
                route: { cluster: xray_ss_xh, timeout: 0s }
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          upgrade_configs:
          - upgrade_type: websocket
          - upgrade_type: HTTPUpgrade

  clusters:
  - name: ui_backend
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ui_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: 127.0.0.1, port_value: 9000 }

  # TROJAN Upstream Layers
  - name: xray_trojan_ws
    connect_timeout: 0.5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_trojan_ws
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: 10000 } }
  - name: xray_trojan_hu
    connect_timeout: 0.5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_trojan_hu
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: 10001 } }
  - name: xray_trojan_xh
    connect_timeout: 0.5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_trojan_xh
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: 10002 } }

  # VMESS Upstream Layers
  - name: xray_vmess_ws
    connect_timeout: 0.5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_vmess_ws
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: 10003 } }
  - name: xray_vmess_hu
    connect_timeout: 0.5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_vmess_hu
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: 10004 } }
  - name: xray_vmess_xh
    connect_timeout: 0.5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_vmess_xh
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: 10005 } }

  # VLESS Upstream Layers
  - name: xray_vless_ws
    connect_timeout: 0.5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_vless_ws
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: 10006 } }
  - name: xray_vless_hu
    connect_timeout: 0.5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_vless_hu
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: 10007 } }
  - name: xray_vless_xh
    connect_timeout: 0.5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_vless_xh
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: 10008 } }

  # SHADOWSOCKS Upstream Layers
  - name: xray_ss_ws
    connect_timeout: 0.5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_ss_ws
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: 10009 } }
  - name: xray_ss_hu
    connect_timeout: 0.5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_ss_hu
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: 10010 } }
  - name: xray_ss_xh
    connect_timeout: 0.5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_ss_xh
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: 10011 } }
